@@ -1,6 +1,5 @@
 package com.gregtechceu.gtceu.api.data.worldgen.generator.veins;
 
-import com.gregtechceu.gtceu.api.data.chemical.material.Material;
 import com.gregtechceu.gtceu.api.data.worldgen.GTOreDefinition;
 import com.gregtechceu.gtceu.api.data.worldgen.generator.VeinGenerator;
 import com.gregtechceu.gtceu.api.data.worldgen.ores.OreBlockPlacer;
@@ -8,11 +7,10 @@ import com.gregtechceu.gtceu.api.data.worldgen.ores.OreBlockPlacer;
 import net.minecraft.core.BlockPos;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.level.WorldGenLevel;
-import net.minecraft.world.level.block.state.BlockState;
 
-import com.mojang.datafixers.util.Either;
 import com.mojang.serialization.Codec;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -22,14 +20,14 @@ public class NoopVeinGenerator extends VeinGenerator {
     public static final Codec<NoopVeinGenerator> CODEC = Codec.unit(() -> INSTANCE);
 
     @Override
-    public List<Map.Entry<Either<BlockState, Material>, Integer>> getAllEntries() {
-        return List.of();
+    public List<VeinEntry> getAllEntries() {
+        return Collections.emptyList();
     }
 
     @Override
     public Map<BlockPos, OreBlockPlacer> generate(WorldGenLevel level, RandomSource random, GTOreDefinition entry,
                                                   BlockPos origin) {
-        return Map.of();
+        return Collections.emptyMap();
     }
 
     @Override
